# kreda-core-vision

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: args.hpp  calibration.cpp  calibration.hpp  config.hpp  debug_hud.hpp  frames.hpp  grid.hpp  ingestion.cpp  ingestion.hpp  main.cpp  masking.hpp  track_log.hpp
src/core/: args.hpp  config.hpp  signals.hpp
src/cv/: calibration.cpp  calibration.hpp  grid.hpp  ingestion.cpp  ingestion.hpp
src/io/: debug_hud.hpp  telemetry.hpp  track_log.hpp
tests/: test_args.cpp  test_calibration.cpp  test_grid.cpp  test_latest_frame.cpp  test_masking.cpp  test_sidecar.cpp
